@@ -1,3 +1,7 @@
+2013-01-03  Carsten Haitzler (The Rasterman)
+
+        * Fixed ecore_con case where freeing server double-frees clients
+
 2013-01-03  Jérémy Zurcher
 
 	* Add eio_eet_sync symbols.
